[gd_scene load_steps=2 format=3 uid="uid://7sqms6cf61uu"]

[ext_resource type="Script" uid="uid://dxcabbw3ensyp" path="res://scripts/menus/GameParameters.gd" id="1_abk2j"]

[node name="Panel" type="Panel"]
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_abk2j")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="MapSizeOption" type="OptionButton" parent="VBoxContainer"]
layout_mode = 2

[node name="TurnCountOption" type="OptionButton" parent="VBoxContainer"]
layout_mode = 2

[node name="StartButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(300, 60)
layout_mode = 2
text = "Start"

[node name="CancelButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(300, 60)
layout_mode = 2
text = "Return"
